# grafana-dashboards

./: .gitignore  README.md  Taskfile.yaml  cert-manager.go  cert-manager.py  dprint.json  go.mod  go.sum  helpers.go  helpers.py  package.json  postgres.json  postgres.py  pyproject.toml  shell.nix  traefik.json  traefik.py  tsconfig.json
dashboards/: cert-manager.ts  dashboards.ts  k8s.ts  omada-controller.ts  postgres.ts  smartctl.ts  traefik.ts  zfs.ts
src/: alerts.ts  commons.ts  example.ts  go-runtime.ts  grafana-helpers.ts  k8s-cadvisor.ts  k8s-kube-state-metrics.ts  panels.ts  promql-helpers.ts  units.ts  utils.ts
src/common-panels/: go-runtime.ts  k8s-cadvisor.ts  k8s-kube-state-metrics.ts
src/helpers/: alerting-rules.ts  annotations.ts  grafana.ts  promql.ts  variables.ts
src/helpers/panels/: barchart.ts  bargauge.ts  commons.ts  loki.ts  piechart.ts  stat.ts  table.ts  target.ts  timeseries.ts
