[tool.poetry]
name = "grafana-dashboards"
version = "0.1.0"
description = ""
authors = ["Blesswin Samuel <blesswinsamuel@gmail.com>"]
readme = "README.md"
packages = [{include = "grafana_dashboards"}]

[tool.poetry.dependencies]
python = "^3.11"
grafanalib = "^0.7.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 500
